# dot_files

./: README.md  install.conf.yaml  pyproject.toml
configs/: Rectangle.plist  Spectacle.plist  bashrc  gitconfig  iterm2.plist  jrnl.yaml  karabiner.json  powerline-shell.json  terminus.yaml  vimrc  zshrc
configs/hyper/: .hyper.js
configs/hyper/.hyper_plugins/: package.json
configs/vscode/: extensions.txt  settings.json
