[tool.poetry]
name = "dot_files"
version = "0.1.0"
description = ""
authors = ["Daniele Esposti <daniele.esposti@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
dotbot = "^1.22.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
